--- a/folios/folio_station_lighting.html
+++ b/folios/folio_station_lighting.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-  <div class='header-img-container torch' style='background-image: url(/folios/arkwright/img/atation_lighting_banner.jpg)'>
-  <img src='http://oddert.github.io/folios/station_lighting/img/station_lighting_banner.jpg' class="header-img" alt='Margate Page One' /></div>
+  <div class='header-img-container torch' style='background-image: url(/folios/station_lighting/img/station_banner.jpg)'>
+  <img src='http://oddert.github.io/folios/station_lighting/img/station_banner.jpg' class="header-img" alt='Margate Page One' /></div>
 
 <a href='/pdfs/station_lighting.pdf' target="_blank" class="a-pdf">
 
@@ -33,44 +33,59 @@
 <h1 class="text-center">Higher Design Proposal Station Lighting Project</h1>
 
 <h4 class="text-center">
-  A project to design a new method of storing and displaying an item for the Arkwright Scholarship program.
+  A UX and Lighting project for the Intermediate Two, Fourth year design proposal.
 </h4>
 
 <h5>
-  As my year group was starting fifth year of high school, Eastwood was given the opportunity to engage fourth year students in a scholarship program.
-
-  At the time, there existed the possibility of myself and the other new fifth years also being permitted to take part. Later this idea was rejected, but whilst waiting, I made some progress on the brief given as part of the application process.
-</h5>
-
-<div class="img-box text-center">
-  <img class="hor" src='/folios/arkwright/img/arkwright_one_logo.jpg' alt="The arkwright logo" />
-  <p class="img-footer">The Arkwright Logo.</p>
-</div>
-
-<h5>
-  The brief was very simple, intended for interpretation as much as deliverable outcome, to design an object, no more than 1.5 x 1.5 meters to hold and/or store and/or display another object.
+  As part of the Higher Product Design Course, as with Intermediate Two, we must produce a Design Proposal as a prelude to the Design Assignment which comprised 50% of our final grade.
   
-  The only other requirement was that a working prototype, or at least a proof-of-concept had to be manufactured and documented.
+  The brief chosen was to create a platform lighting system for a fictional lucrative rail operator to use on all its station platforms with few restrictions placed on functionality and cost.
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/arkwright/img/arkwright_two_DI2.png' alt="Design Idea Two" />
-  <p class="img-footer">Design Idea Two uses a micro-suction-cup material to hold a range of flat-backed items while idea one utilises a shape-memory polymer to be fully flexible in use (pun intended).</p>
+  <img class="hor" src='/folios/station/img/station_four_brief.jpg' alt="The brief" />
+  <p class="img-footer">The main brief with the chosen project.</p>
 </div>
 
 <h5>
-  At the time, this was for me a wonderful chance to apply some new material knowledge and to express and actualise some ongoing ideas which were relevant to my work at the time. Specifically, it was at this time that I was becoming interested in the meaningful impact of product design and moving from a mode of ‘design-for design’s-sake’ and designing products to make a 50th percentile middle class suburban person’s life more comfortable.
-</h5>
-
-<div class="img-box text-center">
-  <img class="hor" src='/folios/arkwright/img/arkwright_three_DI3.png' alt="Design Idea Three" />
-  <p class="img-footer">Daruma dolls originate in Japan and are used to remind oneself of a goal to be achieved at some point in the future. One of the doll’s pupil-less eyes is painted to represent the doll always keeping one eye on you to make sure you stay true to the goal. Once you have achieved the goal the second eye is painted and the doll becomes a reminder of the journey.</p>
-</div>
-
-<h5>
-  I tried to inject some of this thinking into the ideas by making four of them (designs 1, 2, 4 and 5) adaptable and/or modular, making one (design 3) orientated towards personal reflection and individual-base and one designed to be aesthetically contemporary but aimed at lower cost markets.
+  This project was our first real chance to experiment an innovate as the product typology, its placement (multiple units on a platform) and restrictions placed by the brief were all very open.
   
-  I was in the mid development phase for one other the three ideas I wanted to take forward when we were informed that the scholarship was cancelled. I developed idea five through to a prototype and may pick up on some of the others, specifically ideas one, three and five at some point as I believe there is potential in them for a unique design solution.
+  Four of my original ideas were built on the premise that a lighting dimension could be built into an alternative function, that the functional part of a light is the light emitted and that the product to emit the light was merely a ‘casing’, a means to an end.
+  
+  In this way, a lighting project can be thought of as a project to design a new way to achieve the generation and projection of light.
+</h5>
+
+<div class="img-box text-center">
+  <img class="hor" src='/folios/station/img/station_one_timetable.jpg' alt="Timetable light" />
+  <p class="img-footer">The initial sketch for design idea two, floor directed lighting with a timetable display.</p>
+</div>
+
+<h5>
+  My first chosen idea was built around the idea that timetables could be placed on the ground level and used to project light along the ground. This was built on the idea that ground-level light projection was less intrusive and more ambient than excessive overhead lighting and that to build this into the platform would create a floor level intrusion. If the unit had a secondary purpose, the obstruction could be justified.
+</h5>
+
+<div class="img-box text-center">
+  <img class="hor" src='/folios/station/img/station_two_DI5.jpg' alt="Design Idea Five" />
+  <p class="img-footer">Design idea five, expanding sculptural light.</p>
+</div>
+
+<h5>
+  My second idea was built on the idea that a piece of lighting could be ornamental as well as functional, as most platform lighting is purely functional. The opens to emit light, transforming into a solid sphere during the day to evoke a sense of mystery and intrigue by being a piece of sculpture as much an emitter of light.
+</h5>
+  
+<div class="img-box text-center">
+  <img class="hor" src='/folios/station/img/station_three_final.jpg' alt="Final manual render" />
+  <p class="img-footer">The final manual render.</p>
+</div>
+  
+<h5>
+  The final design chosen was the media display unit which incorporated elements from other ideas such as the rotating light cover from idea six. The final design refined the notion of projecting light along the floor by emitting light directed down from the floor to about chest height allowing for some ambient spread.
+  
+  Looking back on the project I am still pleased with the outcome but have some reservations about the means by which the outcome was created.
+  
+  The brief’s looseness on function, cost and location allowed for some inventive ideas but none of those ideas really solved a problem. I tried to make ideas which enhanced the user experience but the lack of research to form the foundations was, in hindsight, a hindrance.
+  
+  If I were to take on this brief now, I would want to do a great deal more research, finding a comparable rail operator and defining a set of problems, areas for improvement and constraints to follow.
 </h5>
 
 <div class="footer">
