--- a/folios/folio_station_lighting.html
+++ b/folios/folio_station_lighting.html
@@ -56,7 +56,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/station/img/station_one_timetable.jpg' alt="Timetable light" />
+  <img class="ver" src='/folios/station/img/station_one_timetable.jpg' alt="Timetable light" />
   <p class="img-footer">The initial sketch for design idea two, floor directed lighting with a timetable display.</p>
 </div>
 
@@ -65,7 +65,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/station/img/station_two_DI5.jpg' alt="Design Idea Five" />
+  <img class="ver" src='/folios/station/img/station_two_DI5.jpg' alt="Design Idea Five" />
   <p class="img-footer">Design idea five, expanding sculptural light.</p>
 </div>
 
@@ -74,7 +74,7 @@
 </h5>
   
 <div class="img-box text-center">
-  <img class="hor" src='/folios/station/img/station_three_final.jpg' alt="Final manual render" />
+  <img class="ver" src='/folios/station/img/station_three_final.jpg' alt="Final manual render" />
   <p class="img-footer">The final manual render.</p>
 </div>
   
