--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
   
   <div class="row center-block marg1">
-    <a href='/pdfs/station_lighting.pdf' target='_blank'><div class="col-xs-5 img-thumbnail">
+    <a href='/folios/folio_station_lighting.html' target='_blank'><div class="col-xs-5 img-thumbnail">
       <img src="https://lh3.googleusercontent.com/KkY4GSL2XUm9wKhRQvYHJMesgVb2sIYD0-XfQqeuRV7Wf_kLyVRH0Vwu2rNUAD32zY-fdfXEQd3XTtu0x57W1JHndh0ctQXboX3xHyfgzX7zcIK8HBHz7mmdmtKAvuoPJep9n5Va6J7rSesU7KDZQB71_wQKs_5tUA02TGDF3rhpQy_PQYK__oQs5UH3zEO-VOlXwaabTTNXQoALwQBAhkKemIOYR05Z6MwMcw_C5rFJnA9zifH7nS09tT0jM1YnKmdrBQBTPFe79AzRrbM-z95u7_9uNTDvpNW4ddIYrnVk7hvPymUvCQDk0dRMgDdRCd4XYcHKCuSqw2IGbW_Zk-QK81LdHOY6BdabmEF4Gb3foGZ1e4FVqGytVf1SK57bGzqCbpEyKE3yy4H39bHGHPD4qubnmftbhtxFZ6BFPAPR4KJNVU5OYhQj1sZnRDCHMPhCu3TI6QZM3SCFVGdapXZr083H3lZ1-_hAf9FhW5cG_Jv9mJCQbu00mYPWgQSeUDwNzyqx6yr_mPOPhg70m24kvXhKfYOZ71WaKYlUFFuGNctxlh_RPRLHrUwxf5GcTjjaJpDgCvxMtmwnR-F-zW1nR_fSP46TAX0siQWqSNc3GPDPZQ=w720-h516-no"
         class="img-responsive iconhover" alt="Station Lighting Design">
       </div></a>
