--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@
   </div>
 
   <div class="row center-block marg1">
-    <a href='/pdfs/victoronox.pdf' target='_blank'><div class="col-xs-5 img-thumbnail">
-      <img src="https://s-media-cache-ak0.pinimg.com/564x/85/8d/3d/858d3dbd4589646a2c35c2fe711e26a9.jpg" class="img-responsive iconhover" alt="Victoronox">
-      </div></a>
+    <a href='/folios/folio_victorinox.html' target='_blank'>
+      <div class="col-xs-5 img-thumbnail">
+        <img src="https://s-media-cache-ak0.pinimg.com/564x/85/8d/3d/858d3dbd4589646a2c35c2fe711e26a9.jpg" class="img-responsive iconhover" alt="Victoronox">
+      </div>
+    </a>
     <a href='/pdfs/ccv.pdf' target='_blank'><div class="col-xs-5 col-xs-offset-2 img-thumbnail">
       <img src="https://s-media-cache-ak0.pinimg.com/564x/e3/b6/84/e3b68466d6757bf1a9dc0966ecf9ccf7.jpg" class="img-responsive iconhover" alt="CCV Interactive Display Table">
     </div></a>
