--- a/folios/folio_victorinox.html
+++ b/folios/folio_victorinox.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Robert Veitch Station Lighting Project</title>
+  <title>Robert Veitch Victorinox Project</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
 
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-  <div class='header-img-container torch' style='background-image: url(/folios/station/img/station_banner.jpg)'>
-  <img src='http://oddert.github.io/folios/station/img/station_banner.jpg' class="header-img" alt='Margate Page One' /></div>
+  <div class='header-img-container torch' style='background-image: url(/folios/victorinox/img/victorinox_banner.png)'>
+  <img src='http://oddert.github.io/folios/victorinox/img/victorinox_banner.png' class="header-img" alt='Victorinox design three' /></div>
 
-<a href='/pdfs/station_lighting.pdf' target="_blank" class="a-pdf">
+<a href='/pdfs/victorinox.pdf' target="_blank" class="a-pdf">
 
   <div class="pdf-link text-center">
     <i class="fa fa-2x fa-file-pdf-o"></i>
@@ -30,62 +30,49 @@
 
 </a>
 
-<h1 class="text-center">Higher Design Proposal Station Lighting Project</h1>
+<h1 class="text-center">Victorinox Swiss Army Knife Project</h1>
 
 <h4 class="text-center">
-  A UX and Lighting project for the Intermediate Two, Fourth year design proposal.
+  Every year the innovation platform <a href='https://www.jovoto.com/community/Oddert'>Jovoto</a> hosts a challenge to design a limited edition swiss army knife casing design for Victorinox.
 </h4>
 
 <h5>
-  As part of the Higher Product Design Course, as with Intermediate Two, we must produce a Design Proposal as a prelude to the Design Assignment which comprised 50% of our final grade.
-  
-  The brief chosen was to create a platform lighting system for a fictional lucrative rail operator to use on all its station platforms with few restrictions placed on functionality and cost.
+  The competition is one of the most well-known repeating challenges on the site with little to no restrictions place on the aesthetic theme or outcome. In recent years a general theme has been defined but for the 2015 competition it was left open. 
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/station/img/station_four_brief.jpg' alt="The brief" />
-  <p class="img-footer">The main brief with the chosen project.</p>
+  <img class="hor" src='/folios/victorinox/img/victorinox_one_logo.jpg' alt="The victorinox logo" />
+  <p class="img-footer">The Victorinox Logo.</p>
 </div>
 
 <h5>
-  This project was our first real chance to experiment an innovate as the product typology, its placement (multiple units on a platform) and restrictions placed by the brief were all very open.
-  
-  Four of my original ideas were built on the premise that a lighting dimension could be built into an alternative function, that the functional part of a light is the light emitted and that the product to emit the light was merely a ‘casing’, a means to an end.
-  
-  In this way, a lighting project can be thought of as a project to design a new way to achieve the generation and projection of light.
+  I decided this was a good chance to branch into an area of product design which was new for me at the time. The challenge is purely graphical, you cannot change the function or materials of the knife and the logo must remain in the same location.
 </h5>
 
 <div class="img-box text-center">
-  <img class="ver" src='/folios/station/img/station_one_timetable.jpg' alt="Timetable light" />
-  <p class="img-footer">The initial sketch for design idea two, floor directed lighting with a timetable display.</p>
+  <img class="ver" src='/folios/victorinox/img/victorinox_two_paint.jpg' alt="Painting before scanning" />
+  <p class="img-footer">The original design for 'A tool for all people' before scanning and editing.</p>
 </div>
 
 <h5>
-  My first chosen idea was built around the idea that timetables could be placed on the ground level and used to project light along the ground. This was built on the idea that ground-level light projection was less intrusive and more ambient than excessive overhead lighting and that to build this into the platform would create a floor level intrusion. If the unit had a secondary purpose, the obstruction could be justified.
+  Two of the designs were created using manual techniques which were then scanned and adjusted for use in the final design, the third was created entirely digitally.
 </h5>
 
 <div class="img-box text-center">
-  <img class="ver" src='/folios/station/img/station_two_DI5.jpg' alt="Design Idea Five" />
-  <p class="img-footer">Design idea five, expanding sculptural light.</p>
+  <img class="ver" src='/folios/victorinox/img/victorinox_three_collage.jpg' alt="Callage of three ideas" />
+  <p class="img-footer">One of the promotional images for each of the three ideas.</p>
 </div>
 
 <h5>
-  My second idea was built on the idea that a piece of lighting could be ornamental as well as functional, as most platform lighting is purely functional. The opens to emit light, transforming into a solid sphere during the day to evoke a sense of mystery and intrigue by being a piece of sculpture as much an emitter of light.
-</h5>
+  The first of my designs played on the idea of smart devices (amongst other products) being compared to the swiss army knife to describe them as versatile and useful, eg “This phone can do anything, it’s the swiss army knife of modern phones” by representing each of the functions of the knife as an ‘app’ icon on a phone graphic.
   
-<div class="img-box text-center">
-  <img class="ver" src='/folios/station/img/station_three_final.jpg' alt="Final manual render" />
-  <p class="img-footer">The final manual render.</p>
-</div>
+  The next (top left) looks at trying to capture motion and energy through use of blown inks and fast, un-coordinated brush strokes.
   
-<h5>
-  The final design chosen was the media display unit which incorporated elements from other ideas such as the rotating light cover from idea six. The final design refined the notion of projecting light along the floor by emitting light directed down from the floor to about chest height allowing for some ambient spread.
+  The last design is similar in that it uses a bright spectrum of colours to convey dynamism. The design uses they symbolism of a rainbow or spectrum to represent diversity of people. This is to push the idea of social acceptance and accessibility as the colours connect the design to the LGBTQ flag but do not make a direct connection.
   
-  Looking back on the project I am still pleased with the outcome but have some reservations about the means by which the outcome was created.
+  In hindsight, it may have been prudent to make the LGBTQ connection stronger to cement the message but I wanted to keep interpretations for the design as open as possible.
   
-  The brief’s looseness on function, cost and location allowed for some inventive ideas but none of those ideas really solved a problem. I tried to make ideas which enhanced the user experience but the lack of research to form the foundations was, in hindsight, a hindrance.
-  
-  If I were to take on this brief now, I would want to do a great deal more research, finding a comparable rail operator and defining a set of problems, areas for improvement and constraints to follow.
+  For all variants of the promotional images and details on the process and inspiration please see the pdf link.
 </h5>
 
 <div class="footer">
