--- a/folios/folio_victorinox.html
+++ b/folios/folio_victorinox.html
@@ -50,7 +50,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="ver" src='/folios/victorinox/img/victorinox_two_paint.jpg' alt="Painting before scanning" />
+  <img class="ver" src='/folios/victorinox/img/victorinox_two_paint.png' alt="Painting before scanning" />
   <p class="img-footer">The original design for 'A tool for all people' before scanning and editing.</p>
 </div>
 
