--- a/folios/folio_ccv.html
+++ b/folios/folio_ccv.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Robert Veitch Victorinox Project</title>
+  <title>Robert Veitch CCV Interface Table</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
 
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-  <div class='header-img-container torch' style='background-image: url(/folios/victorinox/img/victorinox_banner.png)'>
-  <img src='http://oddert.github.io/folios/victorinox/img/victorinox_banner.png' class="header-img" alt='Victorinox design three' /></div>
+  <div class='header-img-container torch' style='background-image: url(/folios/ccv/img/ccv_banner.jpg)'>
+  <img src='http://oddert.github.io/folios/ccv/img/ccv_banner.jpg' class="header-img" alt='CCV Primary Render' /></div>
 
-<a href='/pdfs/victorinox.pdf' target="_blank" class="a-pdf">
+<a href='/pdfs/ccv.pdf' target="_blank" class="a-pdf">
 
   <div class="pdf-link text-center">
     <i class="fa fa-2x fa-file-pdf-o"></i>
@@ -30,49 +30,41 @@
 
 </a>
 
-<h1 class="text-center">Victorinox Swiss Army Knife Project</h1>
+<h1 class="text-center">CCV Interface Table</h1>
 
 <h4 class="text-center">
-  Every year the innovation platform <a href='https://www.jovoto.com/community/Oddert'>Jovoto</a> hosts a challenge to design a limited edition swiss army knife casing design for Victorinox.
+  One of my earliest self-directed projects was to create an interactive computer interface.
 </h4>
 
 <h5>
-  The competition is one of the most well-known repeating challenges on the site with little to no restrictions place on the aesthetic theme or outcome. In recent years a general theme has been defined but for the 2015 competition it was left open. 
+  The device was designed over the summer between fourth and fifth year of high school to use an open source software called Community Core Vison designed for this purpose. 
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/victorinox/img/victorinox_one_logo.jpg' alt="The victorinox logo" />
-  <p class="img-footer">The Victorinox Logo.</p>
+  <img class="hor" src='/folios/ccv/img/ccv_one_interface.jpg' alt="CCV Interface" />
+  <p class="img-footer">The main interface for CCV, on the left is the raw infrared image, the right shows the filtered image and registered touch points.</p>
 </div>
 
 <h5>
-  I decided this was a good chance to branch into an area of product design which was new for me at the time. The challenge is purely graphical, you cannot change the function or materials of the knife and the logo must remain in the same location.
+  The device utilises a standard webcam converted to pick up infrared, with the IR filter removed and a visible light filter (the end of a roll of film) in place. This camera picks up diffused light from a sheet of light diffusing polymethacrylate. The sheet Is flooded with IR light which diffuses downwards on the users touch, the software then detects touch points or clicks.
 </h5>
 
 <div class="img-box text-center">
-  <img class="ver" src='/folios/victorinox/img/victorinox_two_paint.png' alt="Painting before scanning" />
-  <p class="img-footer">The original design for 'A tool for all people' before scanning and editing.</p>
+  <img class="ver" src='/folios/ccv/img/ccv_two_camera.jgp' alt="IR Camera Assembly" />
+  <p class="img-footer">The final camera assembly after modification.</p>
 </div>
 
 <h5>
-  Two of the designs were created using manual techniques which were then scanned and adjusted for use in the final design, the third was created entirely digitally.
+  The assembly was designed to be aesthetic but functional, the less light that leaks in form the outside, the more sensitive the IR camera will be and the clearer the projected image will be. 
 </h5>
 
 <div class="img-box text-center">
-  <img class="ver" src='/folios/victorinox/img/victorinox_three_collage.jpg' alt="Callage of three ideas" />
-  <p class="img-footer">One of the promotional images for each of the three ideas.</p>
+  <img class="ver" src='/folios/ccv/img/ccv_three_exploded.jpg' alt="Exploded CAD model" />
+  <p class="img-footer">The exploded CAD model, designed as a reference for the real-world build.</p>
 </div>
 
 <h5>
-  The first of my designs played on the idea of smart devices (amongst other products) being compared to the swiss army knife to describe them as versatile and useful, eg “This phone can do anything, it’s the swiss army knife of modern phones” by representing each of the functions of the knife as an ‘app’ icon on a phone graphic.
-  
-  The next (top left) looks at trying to capture motion and energy through use of blown inks and fast, un-coordinated brush strokes.
-  
-  The last design is similar in that it uses a bright spectrum of colours to convey dynamism. The design uses they symbolism of a rainbow or spectrum to represent diversity of people. This is to push the idea of social acceptance and accessibility as the colours connect the design to the LGBTQ flag but do not make a direct connection.
-  
-  In hindsight, it may have been prudent to make the LGBTQ connection stronger to cement the message but I wanted to keep interpretations for the design as open as possible.
-  
-  For all variants of the promotional images and details on the process and inspiration please see the pdf link.
+  The final design was going to be built but I decided against it due to cost and storage concerns. The software and dimensioning was functioning as a proof of concept.
 </h5>
 
 <div class="footer">
