--- a/folios/folio_ccv.html
+++ b/folios/folio_ccv.html
@@ -50,7 +50,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="ver" src='/folios/ccv/img/ccv_two_camera.jgp' alt="IR Camera Assembly" />
+  <img class="ver" src='/folios/ccv/img/ccv_two_camera.jpg' alt="IR Camera Assembly" />
   <p class="img-footer">The final camera assembly after modification.</p>
 </div>
 
