--- a/folios/folio_ccv.html
+++ b/folios/folio_ccv.html
@@ -59,7 +59,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="ver" src='/folios/ccv/img/ccv_three_exploded.jpg' alt="Exploded CAD model" />
+  <img class="ver" src='/folios/ccv/img/ccv_three_exploded.JPG' alt="Exploded CAD model" />
   <p class="img-footer">The exploded CAD model, designed as a reference for the real-world build.</p>
 </div>
 
