--- a/folios/folio_toy.html
+++ b/folios/folio_toy.html
@@ -49,12 +49,18 @@
 
 <h5>
   For my six initial ideas I wanted to cover as many areas relating to child development as I could cover.
-1)	Idea One (top left) uses machine learning through the open source Watson API to teach young kids how to interact with animals.
-2)	Idea Two (top centre) is a series of modular blocks and components to move and interact with others to allow the creation of simple robotics to stimulate technical awareness.
-3)	Idea Three (top right) allow the child to draw with non-permanent markers on a mat for a toy train to travel along.
-4)	Idea Four (bottom left) is an assisted safety flying disc to allow for the development of basic physical activities.
-5)	Idea Five (bottom centre) uses interactive motion tracking and a projector to allow the children to interact with computer programs.
-6)	Idea Six (bottom right) Was a series of small toy characters, each representing an emotional state to facilitate discussion and awareness of emotion.
+
+  Idea One (top left) uses machine learning through the open source Watson API to teach young kids how to interact with animals.
+
+  Idea Two (top centre) is a series of modular blocks and components to move and interact with others to allow the creation of simple robotics to stimulate technical awareness.
+
+  Idea Three (top right) allow the child to draw with non-permanent markers on a mat for a toy train to travel along.
+
+  Idea Four (bottom left) is an assisted safety flying disc to allow for the development of basic physical activities.
+
+  Idea Five (bottom centre) uses interactive motion tracking and a projector to allow the children to interact with computer programs.
+
+  Idea Six (bottom right) Was a series of small toy characters, each representing an emotional state to facilitate discussion and awareness of emotion.
 </h5>
 
 <div class="img-box text-center">
