--- a/folios/folio_toy.html
+++ b/folios/folio_toy.html
@@ -33,7 +33,7 @@
 <h1 class="text-center">Higher Design Assignment: Child’s Educational Toy</h1>
 
 <h4 class="text-center">
-  My final higher product design mark was comprised 50% by the design assignment, a directed design project to follow up the <a href=’/folios/folio_station_lighting.html’>design proposal. This folio achieved 100%, the first ever for Eastwood. </a>.
+  My final higher product design mark was comprised 50% by the design assignment, a directed design project to follow up the <a href=’/folios/folio_station_lighting.html’>design proposal</a>. This folio achieved 100%, the first ever for Eastwood.
 </h4>
 
 <h5>
