--- a/folios/folio_station_lighting.html
+++ b/folios/folio_station_lighting.html
@@ -37,7 +37,7 @@
 </h4>
 
 <h5>
-  As part of the Higher Product Design Course, as with Intermediate Two, we must produce a Design Proposal as a prelude to the Design Assignment which comprised 50% of our final grade.
+  As part of the Higher Product Design Course, as with Intermediate Two, we must produce a Design Proposal as a prelude to the <a href="http://oddert.github.io/folios/folio_toy.html">Design Assignment</a> which comprised 50% of our final grade.
   
   The brief chosen was to create a platform lighting system for a fictional lucrative rail operator to use on all its station platforms with few restrictions placed on functionality and cost.
 </h5>
