--- a/msc/skull_index.html
+++ b/msc/skull_index.html
@@ -9,7 +9,29 @@
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
       <link rel="stylesheet" href="http://oddert.github.io/msc/css/skull_style.css">
+  <style>
+    img {
+  width: 100%;
+}
 
+p {
+  font-size: 300%;
+}
+
+h1 {
+  font-family: 'Indie Flower';
+  font-size: 50px;
+  color: pink;
+}
+
+.red {
+  color: red;
+}
+
+h1 a:link, h1 a:visited, h1 a:hover, h1 a:active {
+  color: pink;
+} 
+  </style>
   
 </head>
 
