--- a/msc/the_shaun_and_jen_wiki.html
+++ b/msc/the_shaun_and_jen_wiki.html
@@ -28,6 +28,9 @@ h1 {
 h1 a:link, h1 a:visited, h1 a:hover, h1 a:active {
   color: pink;
 } 
+    strike {
+      text-decoration: wavy;
+    }
   </style>
   
 </head>
