--- a/msc/the_shaun_and_jen_wiki.html
+++ b/msc/the_shaun_and_jen_wiki.html
@@ -28,8 +28,8 @@ h1 {
 h1 a:link, h1 a:visited, h1 a:hover, h1 a:active {
   color: pink;
 } 
-    strike {
-      text-decoration: wavy;
+    .liney {
+      text-decoration: line-through wavy pink;
     }
   </style>
   
@@ -39,7 +39,7 @@ h1 a:link, h1 a:visited, h1 a:hover, h1 a:active {
   <div class="container-fluid">
   <div class="row">
     <div class="col-sm-12 text-center">
-      <h1>the <strike>official</strike> <a href="https://twitter.com/shaun_jen" >shean</a> and <a href="https://twitter.com/deaths_cool">jell</a> wiki</h1>
+      <h1>the <div class="liney">official</div> <a href="https://twitter.com/shaun_jen" >shean</a> and <a href="https://twitter.com/deaths_cool">jell</a> wiki</h1>
     </div>
   </div>
 
