--- a/msc/the_shaun_and_jen_wiki.html
+++ b/msc/the_shaun_and_jen_wiki.html
@@ -30,6 +30,7 @@ h1 a:link, h1 a:visited, h1 a:hover, h1 a:active {
 } 
     .liney {
       text-decoration: line-through wavy pink;
+      display: inline-block;
     }
   </style>
   
