--- a/msc/the_shaun_and_jen_wiki.html
+++ b/msc/the_shaun_and_jen_wiki.html
@@ -34,6 +34,8 @@ h1 a:link, h1 a:visited, h1 a:hover, h1 a:active {
     }
   </style>
   
+  <link rel="icon" type="image/png" href="http://oddert.github.io/msc/faveicon.png">
+  
 </head>
 
 <body>
