--- a/msc/the_shaun_and_jen_wiki.html
+++ b/msc/the_shaun_and_jen_wiki.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>A Pen by  Robin Veitch</title>
+  <title>Trilobites_cool</title>
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
   
