--- a/msc/another_test.html
+++ b/msc/another_test.html
@@ -39,41 +39,41 @@ h1 a:link, h1 a:visited, h1 a:hover, h1 a:active {
 </head>
 
 <body>
-  <div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-12 text-center">
-      <h1>the <div class="liney">official</div> <a href="https://twitter.com/shaun_jen" >shean</a> and <a href="https://twitter.com/deaths_cool">jell</a> wiki</h1>
-    </div>
-  </div>
+  <div class="container">
+  <h2>Carousel Example</h2>  
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
 
-  <div class="row">
-    <div class="col-sm-6">
-      <img src="https://goo.gl/r3n2Ce" alt="skull 1" />
-      <img src="https://goo.gl/E8Whga" alt="skull 2" />
-      <img src="https://goo.gl/CZma4b" alt="skull 3" />
-      <img src="https://goo.gl/apbQ7Z" alt="skull 4" />
-      <img src="https://goo.gl/akYtJi" alt="skull 5" />
-      <img src="https://goo.gl/R7Kpes" alt="skull 6" />
-      <img src="https://goo.gl/ZBntJZ" alt="skull 7" />
-      <img src="https://goo.gl/qwNVSh" alt="skull 8" />
-      <img src="https://goo.gl/3UHJFu" alt="skull 9" />
-      <img src="https://goo.gl/K93DGd" alt="skull 10" />
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="la.jpg" alt="Los Angeles" style="width:100%;">
+      </div>
+
+      <div class="item">
+        <img src="chicago.jpg" alt="Chicago" style="width:100%;">
+      </div>
+    
+      <div class="item">
+        <img src="ny.jpg" alt="New york" style="width:100%;">
+      </div>
     </div>
-    <div class="col-sm-6">
-      <p>wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub
-        wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub
-        wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub wub
-        wub wub wub wub wub wub wub wub w
-      </p>
-    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-  
-  <div class="row">
-    <div class="col-sm-12">
-      <h3 class="text-center">A constructive waste of time by <a href="https://twitter.com/Oddert">Robin Veitch (oddert)</a> <i class="fa fa-flag"></i><i class="fa fa-flag red"></i></h3>
-    </div>
-  </div>
-  
 </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 
