--- a/msc/another_test.html
+++ b/msc/another_test.html
@@ -52,15 +52,15 @@ h1 a:link, h1 a:visited, h1 a:hover, h1 a:active {
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="la.jpg" alt="Los Angeles" style="width:100%;">
+        <img src="https://oddert.github.io/folios/code/img/recipe_book_banner.PNG" alt="Los Angeles" style="width:100%;">
       </div>
 
       <div class="item">
-        <img src="chicago.jpg" alt="Chicago" style="width:100%;">
+        <img src="https://oddert.github.io/folios/code/img/tic_tac_toe_banner.PNG" alt="Chicago" style="width:100%;">
       </div>
     
       <div class="item">
-        <img src="ny.jpg" alt="New york" style="width:100%;">
+        <img src="https://oddert.github.io/folios/code/img/simon_banner.PNG" alt="New york" style="width:100%;">
       </div>
     </div>
 
