--- a/oldindex.html
+++ b/oldindex.html
@@ -9,7 +9,7 @@
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/oldstyle.css">
   
   <link rel="icon" type="image/png" href="/faveicon.png">
   
