--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html >
+  
 <head>
   <meta charset="UTF-8">
-  <title>Nu Portfolio Page</title>
+  <title>Robyn Veitch Portfolio Page</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="css/style.css">
-
-  
 </head>
 
 <body>
