--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
   <div id="header_cover"></div>
   <div class="navBar">
     <div class="navIcons">
-      <p><a href='#page_four_anchor'>Contact</a></p>
-      <p><a href='#page_three_anchor'>About Me</a></p>
-      <p><a href='#page_two_anchor'>Portfolio</a></p>
-      <p><a href='#'>Home</a></p>
+      <p><a href='#page_four_anchor' class='smooth'>Contact</a></p>
+      <p><a href='#page_three_anchor' class='smooth'>About Me</a></p>
+      <p><a href='#page_two_anchor' class='smooth'>Portfolio</a></p>
+      <p><a href='#' class='smooth'>Home</a></p>
     </div>
   </div>
 
   <div class="navDrop"><i id="navDrop-icon" class="fa fa-angle-down fa-3x"></i></div>
 
   <div class="navDrop-menu text-center">
-    <p><a href='#'>Home</a></p>
-    <p><a href='#page_two_anchor'>Portfolio</a></p>
-    <p><a href='#page_three_anchor'>About Me</a></p>
-    <p><a href='#page_four_anchor'>Contact</a></p>
+    <p><a href='#' class='smooth'>Home</a></p>
+    <p><a href='#page_two_anchor' class='smooth'>Portfolio</a></p>
+    <p><a href='#page_three_anchor' class='smooth'>About Me</a></p>
+    <p><a href='#page_four_anchor' class='smooth'>Contact</a></p>
   </div>
 
 </div>
