--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+  <meta name="HandheldFriendly" content="true">
+  <meta name="viewport" content="width=device-width, initial-scale=0.666667, maximum-scale=0.666667, user-scalable=0">
+  <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
