--- a/folios/folio_station_lighting.html
+++ b/folios/folio_station_lighting.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8">
   <title>Robert Veitch Station Lighting Project</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="/css/style_folio.css">
-  
+  <link rel="stylesheet" href="/css/style_folio.css">
   <link rel="icon" type="image/png" href="/faveicon.png">
-
+  <meta name="HandheldFriendly" content="true">
+  <meta name="viewport" content="width=device-width, initial-scale=0.666667, maximum-scale=0.666667, user-scalable=0">
+  <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
