--- a/msc/bigger_picture/index.html
+++ b/msc/bigger_picture/index.html
@@ -7,9 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One" rel="stylesheet">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
   <link rel="stylesheet" href="css/style.css">
-  <meta name="HandheldFriendly" content="true">
-  <meta name="viewport" content="width=device-width, initial-scale=0.666667, maximum-scale=0.666667, user-scalable=0">
-  <meta name="viewport" content="width=device-width">
+  
 </head>
 
 <body>
@@ -17,6 +15,10 @@
 <div id="pages"></div>
 <!--<div class="argle">.</div>-->
 <div id="popup"></div>
+  
+  <!-- <meta name="HandheldFriendly" content="true">
+  <meta name="viewport" content="width=device-width, initial-scale=0.666667, maximum-scale=0.666667, user-scalable=0">
+  <meta name="viewport" content="width=device-width"> -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
