--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a href='https://oddert.github.io/folios/folio_station_lighting.html' target='_blank'>
           <div class="col-sm-4 project station">
             <div class="cover"></div>
-            <h2 class="icon_title">Higher Design Assignment</h2>
+            <h2 class="icon_title">Station Lighting / Interactive Board</h2>
             <p class="icon_desc">An interactive station installation acting as an alternative lighting system.</p>
           </div>
         </a>
