--- a/folios/folio_polymat.html
+++ b/folios/folio_polymat.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Robert Veitch Margate Project</title>
+  <title>Robyn Veitch Margate Project</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
 ``<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
 
@@ -15,7 +15,7 @@
 
 <body>
   <div class='header-img-container margate'>
-  <img src='/folios/margate/img/1.jpg' class="header-img" alt='Margate Page One' /></div>
+  <img src='/folios/polymat/img/polymat_banner.jpg' class="header-img" alt='Polymat Banner Image' /></div>
   <a href='/pdfs/polymat.pdf' target="_blank" class="a-pdf">
 
   <div class="pdf-link text-center">
@@ -28,18 +28,16 @@
 
 </a>
 
-<h1 class="text-center">The Margate Experience Design Project</h1>
+<h1 class="text-center">Polymat kitchen grip assistance</h1>
 
-<h4 class="text-center">The Margate UX Project was a directed project for unit four of my course, focusing on the design process as applied to a real world context.</h4>
+<h4 class="text-center">Polymat is a silicone grip mat designed to tackle issues involved in the kitchen where the user cannot properly grip an item which will otherwise slide about.</h4>
 
-<h5>Unit four of the course is the last unit in stage one and focuses on applying the design process to a real world context by asking us to consider the situation of Margate and how it, through design, could be improved.
-
-The brief for this project was much more open than anything considered previously and offered a great scope for creativity, experimentation and consideration of wider socio-political factors.
-</h5>
+<h5>For the first Unit 7 project we were asked to consider the concept of a multi-generational kitchen in the context of human-centered design. Minority groups including the disabled and elderly are often if not completely overlooked in design with a great many products promising to cater to their needs being ‘gadgety’ attempts to make a quick dollar.
+  </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/margate/img/margate_seafront_dreamland_arlington.jpg' alt="Margate Seafront with Dreamland and Arlington" />
-  <p class="img-footer">A symbol for modern Margate; the closed Dreamland centre overshadowed by an unmaterialised modernist vision, surrounded by scaffolding.</p>
+  <img class="hor" src='/folios/polymat/img/alex_grip_ethnography.png' alt="Alex during the research stage" />
+  <p class="img-footer"></p>
 </div>
 
 <h5>I was very excited for this project, not only was it the first structured project of my return to the course but it was a chance to act on the idea of using design to effect positive change in a real-life context, to break away from the established idea of physical, consumer-based product design.
@@ -48,15 +46,15 @@ In addition, I personally had a bit of a head start in that I had visited Margat
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/margate/img/margate_2017_research.jpg' alt="Day one of Margate Feild Research" />
-  <p class="img-footer">Day one of our group trip to Margate conducting research. Even Arlington can look good with strategic lense flares.</p>
+  <img class="hor" src='/folios/polymat/img/responsive_basin.jpg' alt="My initial thinking for a grip-responsive basin" />
+  <p class="img-footer"></p>
 </div>
 
 <h5>Research formed the backbone of this project to arguably a larger degree than some other past projects. This involved interviews, primary and secondary research, the creation of a ‘cultural map’ in groups, a three-day site visit and personal observations and anecdotes.</h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/margate/img/100.jpg' alt="Margate Presentation Boad One" />
-  <p class="img-footer">First Final Presentation Board</p>
+  <img class="hor" src='/folios/margate/img/silicone_samples.png' alt="3D printed and cast silicone samples" />
+  <p class="img-footer"></p>
 </div>
 
 <div class="img-box text-center">
@@ -70,11 +68,6 @@ The core of this idea is to place Margate at the centre of a broader artistic co
 
 Margate has a rising art scene as personified by the greatly successful Turner Contemporary gallery but is somewhat stunted by its remote location and lack of other attractions. By offering figurative and literal links to other such locations, a coherent experience can be created centred around Margate with connections to London and Dover to entice tourists.
 </h5>
-
-<div class="pen-embed">
-  <p data-height="500" data-theme-id="light" data-slug-hash="rweeeW" data-default-tab="result" data-user="Oddert" data-embed-version="2" data-pen-title="Margate Art Tour Time Demonstration" class="codepen">See the Pen <a href="https://codepen.io/Oddert/pen/rweeeW/">Margate Art Tour Time Demonstration</a> by Robin Veitch (<a href="https://codepen.io/Oddert">@Oddert</a>) on <a href="https://codepen.io">CodePen</a>.</p>
-  <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
-</div>
 
 <h5>Reflecting back on the project I would have liked to delve deeper into specific aspects of the design like what the onboard commentary would have consisted of, more detail put into the design of the vessels and in general, added more user touch points to make the idea more unique.
 
