--- a/folios/folio_polymat.html
+++ b/folios/folio_polymat.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class='header-img-container margate'>
+  <div class='header-img-container polymat' style='background-image: url(/folios/polymat/img/polymat_banner.jpg)'>
   <img src='/folios/polymat/img/polymat_banner.jpg' class="header-img" alt='Polymat Banner Image' /></div>
   <a href='/pdfs/polymat.pdf' target="_blank" class="a-pdf">
 
